La inn mitt scipt i code.js

--- a/craneKick/Code/index.html
+++ b/craneKick/Code/index.html
@@ -7,7 +7,6 @@
         <script src="code.js" defer></script>
     </head>
     <body>
-        <!-- <img src="map.jpg" alt="bIng bOng" width="1920" height="1080"> -->
-        <canvas id="canvasRoom" width="1024" height="768"></canvas>
+        <canvas id="canvasRoom"> </canvas>
     </body>
 </html>
