--- a/craneKick/Code/index.html
+++ b/craneKick/Code/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title></title>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <script src="sprite.js"></script>
         <script src="code.js" defer></script>
     </head>
     <body>
