--- a/craneKick/Code/index.html
+++ b/craneKick/Code/index.html
@@ -9,5 +9,8 @@
     </head>
     <body>
         <canvas id="canvasRoom"> </canvas>
+        
+        <!-- Audio -->
+        <audio src="Audio/audioJump.mp3"></audio>
     </body>
 </html>
