--- a/craneKick/Code/index.html
+++ b/craneKick/Code/index.html
@@ -11,6 +11,6 @@
         <canvas id="canvasRoom"> </canvas>
         
         <!-- Audio -->
-        <audio id = "audioJump" src="craneKick\craneKick\Audio\audioJump.mp3"></audio>
+        <audio id = "audioJump" src="audioJump.mp3"></audio>
     </body>
 </html>
