corrected audio file directory

--- a/craneKick/index.html
+++ b/craneKick/index.html
@@ -11,6 +11,6 @@
         <canvas id="canvasRoom"> </canvas>
         
         <!-- Audio -->
-        <audio id = "audioJump" src="audioJump.mp3"></audio>
+        <audio id = "audioJump" src="Audio/audioJump.mp3"></audio>
     </body>
 </html>
