Fixed html directory to .css and .js files

--- a/craneKick/index.html
+++ b/craneKick/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
-        <link rel="stylesheet" href="style.css">
-        <script src="sprite.js"></script>
-        <script src="code.js" defer></script>
+        <link rel="stylesheet" href="Code/style.css">
+        <script src="Code/sprite.js"></script>
+        <script src="Code/code.js" defer></script>
     </head>
     <body>
         <canvas id="canvasRoom"> </canvas>
