Lagd ny js fil for alle funtions og flyttet dem

--- a/craneKick/index.html
+++ b/craneKick/index.html
@@ -5,7 +5,9 @@
         <title></title>
         <link rel="stylesheet" href="Code/style.css">
         <script src="Code/sprite.js"></script>
+        <script src="Code/functions.js" defer></script>
         <script src="Code/code.js" defer></script>
+
     </head>
     <body>
         <canvas id="canvasRoom"> </canvas>
