lagd en fil for alle variabler og flyttet dem der

--- a/craneKick/index.html
+++ b/craneKick/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title></title>
         <link rel="stylesheet" href="Code/style.css">
+        <script src="Code/variables.js" defer></script>
         <script src="Code/sprite.js"></script>
         <script src="Code/functions.js" defer></script>
         <script src="Code/code.js" defer></script>
