--- a/craneKick/index.html
+++ b/craneKick/index.html
@@ -14,6 +14,7 @@
         
         <!-- Audio -->
         <audio id = "audioJump" src="Audio/audioJump.mp3"></audio>
+        <audio id = "ohYeah" src="Audio/ohYeah.mp3"></audio>
         <img id = "bogosBinted" src="Art/Characters/bogosBinted.png" alt="Bogos Binted?">
     </body>
 </html>
