crusty doulbe jump script

--- a/craneKick/index.html
+++ b/craneKick/index.html
@@ -16,6 +16,7 @@
         <!-- Audio -->
         <audio id = "audioJump" src="Audio/audioJump.mp3"></audio>
         <audio id = "ohYeah" src="Audio/ohYeah.mp3"></audio>
+        <audio id = "vine-boom" src="Audio/vine-boom.mp3"></audio>
         <img id = "bogosBinted" src="Art/Characters/bogosBinted.png" alt="Bogos Binted?">
     </body>
 </html>
