--- a/craneKick/index.html
+++ b/craneKick/index.html
@@ -18,5 +18,7 @@
         <audio id = "ohYeah" src="Audio/ohYeah.mp3"></audio>
         <audio id = "vine-boom" src="Audio/vine-boom.mp3"></audio>
         <img id = "bogosBinted" src="Art/Characters/bogosBinted.png" alt="Bogos Binted?">
+        <img id = "background" src="Art/Rooms/Limeroom_Concept.png" alt="background">
+        <img id = "sprite1" src="Art/Characters/sprite1.png" alt="sprite1">
     </body>
 </html>
