--- a/craneKick/index.html
+++ b/craneKick/index.html
@@ -18,5 +18,6 @@
         <audio id = "ohYeah" src="Audio/ohYeah.mp3"></audio>
         <audio id = "vine-boom" src="Audio/vine-boom.mp3"></audio>
         <img id = "bogosBinted" src="Art/Characters/bogosBinted.png" alt="Bogos Binted?">
+        <img id = "roomLimeroom" src="Art/Rooms/roomLimeroom.png" alt="limeRoom">
     </body>
 </html>
