--- a/craneKick/index.html
+++ b/craneKick/index.html
@@ -7,9 +7,10 @@
         <script src="Code/variables.js" defer></script>
         <script src="Code/sprite.js"></script>
         <script src="Code/functions.js" defer></script>
+        <script src="Code/ui.js" defer></script>
         <script src="Code/code.js" defer></script>
 
-    </head>
+    </head> 
     <body>
         <canvas id="canvasRoom"> </canvas>
         
